Why choose us? section updated

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="hero container">
+    <section class="hero container pb-5">
       <div class="row justify-content-center">
         <div class="col-md-5 text-white">
           <h1 class="">
@@ -65,14 +65,40 @@
           </p>
           <a href="#" class="op-btn-primary mt-4 d-inline-block">Get Me Started</a>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-6">
           <img src="images/pic-head.png" class="img-fluid mt-5" alt="">
         </div>
       </div>
     </section>
   </header>
 
-
+  <section class="main container text-center mt-5 mb-5">
+    <h1 class="display-4">Why choose us?</h1>
+    <div class="row mt-5">
+      <div class="col-md-3">
+        <img src="images/service1.jpg" class="img-fluid mb-3" alt="">
+        <h3>Genuine Websites:</h3>
+        <p>No PBNs or shady sites, all websites we prospect have organic traffic and real readers at the other side.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/service2.jpg" class="img-fluid mb-3" alt="">
+        <h3>Relevant Links:</h3>
+        <p>We seek out niche relevant sites that match up with your client’s area of business or target audience.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/service3.jpg" class="img-fluid mb-3" alt="">
+        <h3>Relevant Content:</h3>
+        <p>Our in-house writers produce magazine quality niche relevant content, no shoehorned out of context link
+          placements.</p>
+      </div>
+      <div class="col-md-3">
+        <img src="images/service4.jpg" class="img-fluid mb-3" alt="">
+        <h3>Editorial Posts:</h3>
+        <p>We work with bloggers to have content published under their own editorial team, no author bios or guest post
+          footprints.</p>
+      </div>
+    </div>
+  </section>
 
 
 
